Late December AV papers from TRO

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,64 @@
+@article{fayyad2020deep,
+  title =        {Deep learning sensor fusion for autonomous vehicle perception
+                  and localization: A review},
+  author =       {Fayyad, Jamil and Jaradat, Mohammad A and Gruyer, Dominique
+                  and Najjaran, Homayoun},
+  journal =      {Sensors},
+  volume =       {20},
+  number =       {15},
+  pages =        {4220},
+  year =         {2020},
+  publisher =    {MDPI}
+}
+
+@article{10250987,
+  author =       {Zhang, Tianpeng and Qin, Victor and Tang, Yujie and Li, Na},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {Distributed Information-Based Source Seeking},
+  year =         2023,
+  volume =       39,
+  number =       6,
+  pages =        {4749-4767},
+  doi =          {10.1109/TRO.2023.3309099}
+}
+
+@article{10219002,
+  author =       {Wen, Tao and Freris, Nikolaos M.},
+  journal =      {IEEE Transactions on Robotics},
+  title =        {Semantically Enhanced Multi-Object Detection and Tracking for
+                  Autonomous Vehicles},
+  year =         2023,
+  volume =       39,
+  number =       6,
+  pages =        {4600-4615},
+  doi =          {10.1109/TRO.2023.3299517}
+}
+
+@software{mlx2023,
+  author =       {Awni Hannun and Jagrit Digani and Angelos Katharopoulos and
+                  Ronan Collobert},
+  title =        {{MLX}: Efficient and flexible machine learning on Apple
+                  silicon},
+  url =          {https://github.com/ml-explore},
+  version =      {0.0},
+  year =         {2023},
+}
+
+
+
+@article{kerbl20233d,
+  title =        {3d gaussian splatting for real-time radiance field rendering},
+  author =       {Kerbl, Bernhard and Kopanas, Georgios and Leimk{\"u}hler,
+                  Thomas and Drettakis, George},
+  journal =      {ACM Transactions on Graphics (ToG)},
+  volume =       {42},
+  number =       {4},
+  pages =        {1--14},
+  year =         {2023},
+  publisher =    {ACM New York, NY, USA}
+}
+
+
 @misc{iyer2023household,
   title =        {Household navigation and manipulation for everyday object
                   rearrangement tasks},
@@ -120,16 +181,6 @@
                   safety policies.}
 }
 
-@misc{huang2023photoslam,
-  title =        {Photo-SLAM: Real-time Simultaneous Localization and
-                  Photorealistic Mapping for Monocular, Stereo, and RGB-D
-                  Cameras},
-  author =       {Huajian Huang and Longwei Li and Hui Cheng and Sai-Kit Yeung},
-  year =         {2023},
-  eprint =       {2311.16728},
-  archivePrefix ={arXiv},
-  primaryClass = {cs.CV}
-}
 
 @misc{xiong2023neural,
   title =        {Neural Map Prior for Autonomous Driving},
