--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,24 @@
+@inproceedings{fu2024mobile,
+  author =       {Fu, Zipeng and Zhao, Tony Z. and Finn, Chelsea},
+  title =        {Mobile ALOHA: Learning Bimanual Mobile Manipulation with
+                  Low-Cost Whole-Body Teleoperation},
+  booktitle =    {arXiv},
+  year =         2024,
+}
+
+@misc{yan2024street,
+  title =        {Street Gaussians for Modeling Dynamic Urban Scenes},
+  author =       {Yunzhi Yan and Haotong Lin and Chenxu Zhou and Weijie Wang and
+                  Haiyang Sun and Kun Zhan and Xianpeng Lang and Xiaowei Zhou
+                  and Sida Peng},
+  year =         2024,
+  eprint =       {2401.01339},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV},
+  pdf =          {street_gaussians.pdf},
+  url =          {https://zju3dv.github.io/street_gaussians/}
+}
+
 @article{fayyad2020deep,
   title =        {Deep learning sensor fusion for autonomous vehicle perception
                   and localization: A review},
