Mid Jan reference updates

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,35 @@
+@inproceedings{wiederer2023joint,
+  title =        {Joint Out-of-Distribution Detection and Uncertainty Estimation
+                  for Trajectory Prediction},
+  author =       {Wiederer, Julian and Schmidt, Julian and Kressel, Ulrich and
+                  Dietmayer, Klaus and Belagiannis, Vasileios},
+  booktitle =    {2023 IEEE/RSJ International Conference on Intelligent Robots
+                  and Systems (IROS)},
+  pages =        {5487--5494},
+  year =         {2023},
+  organization = {IEEE}
+}
+
+
+@inproceedings{zhang20233d,
+  title =        {3D Registration with Maximal Cliques},
+  author =       {Zhang, Xiyu and Yang, Jiaqi and Zhang, Shikun and Zhang,
+                  Yanning},
+  booktitle =    {Proceedings of the IEEE/CVF Conference on Computer Vision and
+                  Pattern Recognition},
+  pages =        {17745--17754},
+  year =         2023
+}
+
+@misc{taher2024fitngp,
+  title =        {Fit-NGP: Fitting Object Models to Neural Graphics Primitives},
+  author =       {Marwan Taher and Ignacio Alzugaray and Andrew J. Davison},
+  year =         2024,
+  eprint =       {2401.02357},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
 @inproceedings{fu2024mobile,
   author =       {Fu, Zipeng and Zhao, Tony Z. and Finn, Chelsea},
   title =        {Mobile ALOHA: Learning Bimanual Mobile Manipulation with
