--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,115 @@
+@article{osm_loc_1,
+  title =        {Openstreetmap-based lidar global localization in urban
+                  environment without a prior lidar map},
+  author =       {Cho, Younghun and Kim, Giseop and Lee, Sangmin and Ryu,
+                  Jee-Hwan},
+  journal =      {IEEE Robotics and Automation Letters},
+  volume =       {7},
+  number =       {2},
+  pages =        {4999--5006},
+  year =         {2022},
+  publisher =    {IEEE}
+}
+
+@inproceedings{osm_nav_1,
+  title =        {Autonomous robot navigation based on openstreetmap geodata},
+  author =       {Hentschel, Matthias and Wagner, Bernardo},
+  booktitle =    {13th International IEEE Conference on Intelligent
+                  Transportation Systems},
+  pages =        {1645--1650},
+  year =         {2010},
+  organization = {IEEE}
+}
+
+@inproceedings{osm_localization,
+  title =        {Localization on openstreetmap data using a 3d laser scanner},
+  author =       {Ruchti, Philipp and Steder, Bastian and Ruhnke, Michael and
+                  Burgard, Wolfram},
+  booktitle =    {2015 IEEE international conference on robotics and automation
+                  (ICRA)},
+  pages =        {5260--5265},
+  year =         {2015},
+  organization = {IEEE}
+}
+
+@article{osm_nav_2,
+  title =        {Mapping a hospital using OpenStreetMap and Graphhopper: A
+                  navigation system},
+  author =       {Samah, KAFA and Ibrahim, S and Ghazali, N and Suffian, M and
+                  Mansor, M and Latif, WA},
+  journal =      {Bulletin of Electrical Engineering and Informatics},
+  volume =       {9},
+  number =       {2},
+  pages =        {661--668},
+  year =         {2020}
+}
+
+@article{osm_av1,
+  title =        {Exploring Navigation Maps for Learning-Based Motion
+                  Prediction},
+  author =       {Schmidt, Julian and Jordan, Julian and Gritschneder, Franz and
+                  Monninger, Thomas and Dietmayer, Klaus},
+  journal =      {arXiv preprint arXiv:2302.06195},
+  year =         {2023}
+}
+
+@misc{liao2023osm,
+  title =        {OSM vs HD Maps: Map Representations for Trajectory Prediction},
+  author =       {Jing-Yan Liao and Parth Doshi and Zihan Zhang and David Paz
+                  and Henrik Christensen},
+  year =         {2023},
+  eprint =       {2311.02305},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@InProceedings{xiao24,
+  author =       {Qingyu Xiao and Zulfiqar Zaidi and Matthew Gombolay},
+  title =        {Multi-Camera Asynchronous Ball Localization and Trajectory
+                  Prediction with Factor Graphs and Human Poses},
+  booktitle =    {Intl. Conf. on Robotics and Automation},
+  year =         2024,
+  pages =        { },
+  month =        {May},
+  address =      {Osaka, JP},
+  organization = {IEEE}
+}
+
+@InProceedings{nivash24,
+  author =       {Vidyaa Krishnan Nivash and Ahmed H. Qureshi},
+  title =        {SIMMF: Semantics-aware Interactive Multiagent Motion
+                  Forecasting for Autonomous Vehicle Driving},
+  booktitle =    {Intl. Conf. on Robotics and Automation},
+  year =         2024,
+  pages =        { },
+  month =        {May},
+  address =      {Osaka, JP},
+  organization = {IEEE},
+  URL =          {https://arxiv.org/pdf/2306.14941.pdf}
+}
+
+@article{kong2004ins,
+  title =        {INS algorithm using quaternion model for low cost IMU},
+  author =       {Kong, Xiaoying},
+  journal =      {Robotics and Autonomous Systems},
+  volume =       {46},
+  number =       {4},
+  pages =        {221--246},
+  year =         {2004},
+  publisher =    {Elsevier}
+}
+
+@misc{shi2022geometrybased,
+  title =        {Geometry-based Distance Decomposition for Monocular 3D Object
+                  Detection},
+  author =       {Xuepeng Shi and Qi Ye and Xiaozhi Chen and Chuangrong Chen and
+                  Zhixiang Chen and Tae-Kyun Kim},
+  year =         2022,
+  eprint =       {2104.03775},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
 @inproceedings{wiederer2023joint,
   title =        {Joint Out-of-Distribution Detection and Uncertainty Estimation
                   for Trajectory Prediction},
