AVL/RSS/IV updates

--- a/newlib.bib
+++ b/newlib.bib
@@ -1,3 +1,62 @@
+@article{Lim_2023,
+  title =        {Optimality Guarantees for Particle Belief Approximation of
+                  POMDPs},
+  volume =       77,
+  ISSN =         {1076-9757},
+  url =          {http://dx.doi.org/10.1613/jair.1.14525},
+  DOI =          {10.1613/jair.1.14525},
+  journal =      {Journal of Artificial Intelligence Research},
+  publisher =    {AI Access Foundation},
+  author =       {Lim, Michael H. and Becker, Tyler J. and Kochenderfer, Mykel
+                  J. and Tomlin, Claire J. and Sunberg, Zachary N.},
+  year =         2023,
+  month =        aug,
+  pages =        {1591–1636}
+}
+
+@misc{peng2024lanegraph2seq,
+  title =        {LaneGraph2Seq: Lane Topology Extraction with Language Model
+                  via Vertex-Edge Encoding and Connectivity Enhancement},
+  author =       {Renyuan Peng and Xinyue Cai and Hang Xu and Jiachen Lu and
+                  Feng Wen and Wei Zhang and Li Zhang},
+  year =         2024,
+  eprint =       {2401.17609},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@InProceedings{Sucar_2021_ICCV,
+  author =       {Sucar, Edgar and Liu, Shikun and Ortiz, Joseph and Davison,
+                  Andrew J.},
+  title =        {iMAP: Implicit Mapping and Positioning in Real-Time},
+  booktitle =    {Proceedings of the IEEE/CVF International Conference on
+                  Computer Vision (ICCV)},
+  month =        {October},
+  year =         2021,
+  pages =        {6229-6238}
+}
+
+@misc{zhu2022niceslam,
+  title =        {NICE-SLAM: Neural Implicit Scalable Encoding for SLAM},
+  author =       {Zihan Zhu and Songyou Peng and Viktor Larsson and Weiwei Xu
+                  and Hujun Bao and Zhaopeng Cui and Martin R. Oswald and Marc
+                  Pollefeys},
+  year =         2022,
+  eprint =       {2112.12130},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{philion2020lift,
+  title =        {Lift, Splat, Shoot: Encoding Images From Arbitrary Camera Rigs
+                  by Implicitly Unprojecting to 3D},
+  author =       {Jonah Philion and Sanja Fidler},
+  year =         2020,
+  eprint =       {2008.05711},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
 @article{osm_loc_1,
   title =        {Openstreetmap-based lidar global localization in urban
                   environment without a prior lidar map},
