--- a/newlib.bib
+++ b/newlib.bib
@@ -79733,26 +79733,59 @@
 }
 
 @misc{coda2023tdr,
-    author =     {Zhang, Arthur and Eranki, Chaitanya and Zhang, Christina and
+  author =       {Zhang, Arthur and Eranki, Chaitanya and Zhang, Christina and
                   Hong, Raymond and Kalyani, Pranav and Kalyanaraman, Lochana
                   and Gamare, Arsh and Esteva, Maria and Biswas, Joydeep},
-    publisher =  {Texas Data Repository},
-    title =      { {UT Campus Object Dataset (CODa)}},
-    year =       2023,
-    version =    {DRAFT VERSION},
-    doi =        {10.18738/T8/BBOQMV},
-    url =        {https://doi.org/10.18738/T8/BBOQMV}
+  publisher =  {Texas Data Repository},
+  title =      { {UT Campus Object Dataset (CODa)}},
+  year =       2023,
+  version =    {DRAFT VERSION},
+  doi =        {10.18738/T8/BBOQMV},
+  url =        {https://doi.org/10.18738/T8/BBOQMV}
 }
 
 @misc{zhang2023robust,
-    title =      {Towards Robust Robot 3D Perception in Urban Environments: The
+  title =        {Towards Robust Robot 3D Perception in Urban Environments: The
                   UT Campus Object Dataset},
-    author =     {Arthur Zhang and Chaitanya Eranki and Christina Zhang and
+  author =       {Arthur Zhang and Chaitanya Eranki and Christina Zhang and
                   Ji-Hwan Park and Raymond Hong and Pranav Kalyani and Lochana
                   Kalyanaraman and Arsh Gamare and Arnav Bagad and Maria Esteva
                   and Joydeep Biswas},
-    year =       {2023},
-    eprint =     {2309.13549},
-    archivePrefix ={arXiv},
-    primaryClass ={cs.RO}
+  year =         2023,
+  eprint =     {2309.13549},
+  archivePrefix ={arXiv},
+  primaryClass ={cs.RO}
+}
+
+@misc{lin2024vastgaussian,
+  title =        {VastGaussian: Vast 3D Gaussians for Large Scene
+                  Reconstruction},
+  author =       {Jiaqi Lin and Zhihao Li and Xiao Tang and Jianzhuang Liu and
+                  Shiyong Liu and Jiayue Liu and Yangdi Lu and Xiaofei Wu and
+                  Songcen Xu and Youliang Yan and Wenming Yang},
+  year =         {2024},
+  eprint =       {2402.17427},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{yang2023emernerf,
+  title =        {EmerNeRF: Emergent Spatial-Temporal Scene Decomposition via
+                  Self-Supervision},
+  author =       {Jiawei Yang and Boris Ivanovic and Or Litany and Xinshuo Weng
+                  and Seung Wook Kim and Boyi Li and Tong Che and Danfei Xu and
+                  Sanja Fidler and Marco Pavone and Yue Wang},
+  year =         {2023},
+  eprint =       {2311.02077},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
+}
+
+@misc{savant2024modeling,
+  title =        {Modeling uncertainty for Gaussian Splatting},
+  author =       {Luca Savant and Diego Valsesia and Enrico Magli},
+  year =         2024,
+  eprint =       {2403.18476},
+  archivePrefix ={arXiv},
+  primaryClass = {cs.CV}
 }
