--- a/newlib.bib
+++ b/newlib.bib
@@ -79799,52 +79799,165 @@
   primaryClass = {cs.RO}
 }
 
+@article{10.1016/j.jksuci.2022.03.013,
+  year =         2022,
+  title =        {{A Comprehensive Survey on the Application of Deep and
+                  Reinforcement Learning Approaches in Autonomous Driving}},
+  author =       {Elallid, Badr Ben and Benamar, Nabil and Hafid, Abdelhakim
+                  Senhaji and Rachidi, Tajjeeddine and Mrani, Nabil},
+  journal =      {Journal of King Saud University - Computer and Information
+                  Sciences},
+  issn =         {1319-1578},
+  doi =          {10.1016/j.jksuci.2022.03.013},
+  abstract =     {{Recent advances in Intelligent Transport Systems (ITS) and
+                  Artificial Intelligence (AI) have stimulated and paved the way
+                  toward the widespread introduction of Autonomous Vehicles
+                  (AVs). This has opened new opportunities for smart roads,
+                  intelligent traffic safety, and traveler comfort. Autonomous
+                  Vehicles have become a highly popular research topic in recent
+                  years because of their significant capability to reduce road
+                  accidents and human injuries. This paper is an attempt to
+                  survey all recent AI based techniques used to deal with major
+                  functions in AVs, namely scene understanding, motion planning,
+                  decision making, vehicle control, social behavior, and
+                  communication. Our survey focuses solely on deep learning and
+                  reinforcement learning based approaches; it does not include
+                  conventional (shallow) shallow based techniques, a subject
+                  that has been extensively investigated in the past. Our survey
+                  builds a taxonomy of DL and RL algorithms that have been used
+                  so far to bring solutions to the four main issues in
+                  autonomous driving. Finally, this survey highlights the open
+                  challenges and points out possible future research
+                  directions.}},
+  pages =        {7366--7390},
+  number =       9,
+  volume =       34
+}
 
-@article{10.1016/j.jksuci.2022.03.013,  
-year = {2022},  
-title = {{A Comprehensive Survey on the Application of Deep and Reinforcement Learning Approaches in Autonomous Driving}},  
-author = {Elallid, Badr Ben and Benamar, Nabil and Hafid, Abdelhakim Senhaji and Rachidi, Tajjeeddine and Mrani, Nabil},  
-journal = {Journal of King Saud University - Computer and Information Sciences},  
-issn = {1319-1578},  
-doi = {10.1016/j.jksuci.2022.03.013},  
-abstract = {{Recent advances in Intelligent Transport Systems (ITS) and Artificial Intelligence (AI) have stimulated and paved the way toward the widespread introduction of Autonomous Vehicles (AVs). This has opened new opportunities for smart roads, intelligent traffic safety, and traveler comfort. Autonomous Vehicles have become a highly popular research topic in recent years because of their significant capability to reduce road accidents and human injuries. This paper is an attempt to survey all recent AI based techniques used to deal with major functions in AVs, namely scene understanding, motion planning, decision making, vehicle control, social behavior, and communication. Our survey focuses solely on deep learning and reinforcement learning based approaches; it does not include conventional (shallow) shallow based techniques, a subject that has been extensively investigated in the past. Our survey builds a taxonomy of DL and RL algorithms that have been used so far to bring solutions to the four main issues in autonomous driving. Finally, this survey highlights the open challenges and points out possible future research directions.}},  
-pages = {7366--7390},  
-number = {9},  
-volume = {34} 
+@article{10.3390/app12052574,
+  year =         2022,
+  title =        {{Application of the Theory of Planned Behavior in Autonomous
+                  Vehicle-Pedestrian Interaction}},
+  author =       {Hafeez, Farrukh and Sheikh, Usman Ullah and Mas’ud, Abdullahi
+                  Abubakar and Al-Shammari, Saud and Hamid, Muhammad and Azhar,
+                  Ameer},
+  journal =      {Applied Sciences},
+  doi =          {10.3390/app12052574},
+  abstract =     {{Automobile manufacturers, alongside technology providers,
+                  researchers, and public agencies, are conducting extensive
+                  testing to design autonomous vehicles (AVs) algorithms that
+                  will provide a complete understanding of road users,
+                  specifically pedestrians. Pedestrian behavior and actions
+                  determination are highly unpredictable depending on behavioral
+                  beliefs, context, and socio-demographic variables. Context
+                  includes everything that potentially affects one’s behavior;
+                  in AVs–pedestrian interaction, context may consist of weather
+                  conditions, road structure, social factors norms, and traffic
+                  volume. These influencing elements, therefore, need to be
+                  focused on during the development of pedestrian interaction
+                  algorithms. For this purpose, the pedestrian behavior
+                  questionnaire for FAVs (PBQF) is designed based on the theory
+                  of planned behavior (TPB). A total of almost 1000 voluntary
+                  participants completed this multilingual survey. As
+                  socio-demographic values and physiological perception varies
+                  with local norms, regions, and ethnicity, participants from 27
+                  countries were therefore chosen to account for this variation.
+                  One of the key findings of this study is the influence of
+                  pedestrian attributes and the context on pedestrian behavior.
+                  Pedestrian action cannot be understood without visual
+                  observation of the pedestrian themselves and their context.
+                  The findings showed that pedestrians build communication with
+                  vehicles based on their driving styles. The vehicle’s driving
+                  style leads pedestrians to think that the vehicle is
+                  human-driven or autonomous. The results also revealed that
+                  pedestrians use several cues to show their intention. The
+                  general perception of AVs was also analyzed, and the
+                  communication between AVs and pedestrians with different
+                  displaying options was investigated.}},
+  pages =        2574,
+  number =       5,
+  volume =       12,
+  local-url =
+                  {file://localhost/Users/hic/Documents/Papers%20Library/2022/2022-Azhar-Hafeez-Application%20of%20the%20Theory%20of%20Planned%20Behavior%20in%20Autonomous%20Vehicle-Pedestrian%20Interaction_1.pdf}
 }
-@article{10.3390/app12052574,  
-year = {2022},  
-title = {{Application of the Theory of Planned Behavior in Autonomous Vehicle-Pedestrian Interaction}},  
-author = {Hafeez, Farrukh and Sheikh, Usman Ullah and Mas’ud, Abdullahi Abubakar and Al-Shammari, Saud and Hamid, Muhammad and Azhar, Ameer},  
-journal = {Applied Sciences},  
-doi = {10.3390/app12052574},  
-abstract = {{Automobile manufacturers, alongside technology providers, researchers, and public agencies, are conducting extensive testing to design autonomous vehicles (AVs) algorithms that will provide a complete understanding of road users, specifically pedestrians. Pedestrian behavior and actions determination are highly unpredictable depending on behavioral beliefs, context, and socio-demographic variables. Context includes everything that potentially affects one’s behavior; in AVs–pedestrian interaction, context may consist of weather conditions, road structure, social factors norms, and traffic volume. These influencing elements, therefore, need to be focused on during the development of pedestrian interaction algorithms. For this purpose, the pedestrian behavior questionnaire for FAVs (PBQF) is designed based on the theory of planned behavior (TPB). A total of almost 1000 voluntary participants completed this multilingual survey. As socio-demographic values and physiological perception varies with local norms, regions, and ethnicity, participants from 27 countries were therefore chosen to account for this variation. One of the key findings of this study is the influence of pedestrian attributes and the context on pedestrian behavior. Pedestrian action cannot be understood without visual observation of the pedestrian themselves and their context. The findings showed that pedestrians build communication with vehicles based on their driving styles. The vehicle’s driving style leads pedestrians to think that the vehicle is human-driven or autonomous. The results also revealed that pedestrians use several cues to show their intention. The general perception of AVs was also analyzed, and the communication between AVs and pedestrians with different displaying options was investigated.}},  
-pages = {2574},  
-number = {5},  
-volume = {12},  
-local-url = {file://localhost/Users/hic/Documents/Papers%20Library/2022/2022-Azhar-Hafeez-Application%20of%20the%20Theory%20of%20Planned%20Behavior%20in%20Autonomous%20Vehicle-Pedestrian%20Interaction_1.pdf} 
+
+@article{10.1016/j.robot.2019.01.003,
+  year =         2019,
+  title =        {{Advanced planning for autonomous vehicles using reinforcement
+                  learning and deep inverse reinforcement learning}},
+  author =       {You, Changxi and Lu, Jianbo and Filev, Dimitar and Tsiotras,
+                  Panagiotis},
+  journal =      {Robotics and Autonomous Systems},
+  issn =         {0921-8890},
+  doi =          {10.1016/j.robot.2019.01.003},
+  abstract =     {{Autonomous vehicles promise to improve traffic safety while,
+                  at the same time, increase fuel efficiency and reduce
+                  congestion. They represent the main trend in future
+                  intelligent transportation systems. This paper concentrates on
+                  the planning problem of autonomous vehicles in traffic. We
+                  model the interaction between the autonomous vehicle and the
+                  environment as a stochastic Markov decision process (MDP) and
+                  consider the driving style of an expert driver as the target
+                  to be learned. The road geometry is taken into consideration
+                  in the MDP model in order to incorporate more diverse driving
+                  styles. The desired, expert-like driving behavior of the
+                  autonomous vehicle is obtained as follows: First, we design
+                  the reward function of the corresponding MDP and determine the
+                  optimal driving strategy for the autonomous vehicle using
+                  reinforcement learning techniques. Second, we collect a number
+                  of demonstrations from an expert driver and learn the optimal
+                  driving strategy based on data using inverse reinforcement
+                  learning. The unknown reward function of the expert driver is
+                  approximated using a deep neural-network (DNN). We clarify and
+                  validate the application of the maximum entropy principle
+                  (MEP) to learn the DNN reward function, and provide the
+                  necessary derivations for using the maximum entropy principle
+                  to learn a parameterized feature (reward) function. Simulated
+                  results demonstrate the desired driving behaviors of an
+                  autonomous vehicle using both the reinforcement learning and
+                  inverse reinforcement learning techniques.}},
+  pages =        {1--18},
+  volume =       114
 }
-@article{10.1016/j.robot.2019.01.003,  
-year = {2019},  
-title = {{Advanced planning for autonomous vehicles using reinforcement learning and deep inverse reinforcement learning}},  
-author = {You, Changxi and Lu, Jianbo and Filev, Dimitar and Tsiotras, Panagiotis},  
-journal = {Robotics and Autonomous Systems},  
-issn = {0921-8890},  
-doi = {10.1016/j.robot.2019.01.003},  
-abstract = {{Autonomous vehicles promise to improve traffic safety while, at the same time, increase fuel efficiency and reduce congestion. They represent the main trend in future intelligent transportation systems. This paper concentrates on the planning problem of autonomous vehicles in traffic. We model the interaction between the autonomous vehicle and the environment as a stochastic Markov decision process (MDP) and consider the driving style of an expert driver as the target to be learned. The road geometry is taken into consideration in the MDP model in order to incorporate more diverse driving styles. The desired, expert-like driving behavior of the autonomous vehicle is obtained as follows: First, we design the reward function of the corresponding MDP and determine the optimal driving strategy for the autonomous vehicle using reinforcement learning techniques. Second, we collect a number of demonstrations from an expert driver and learn the optimal driving strategy based on data using inverse reinforcement learning. The unknown reward function of the expert driver is approximated using a deep neural-network (DNN). We clarify and validate the application of the maximum entropy principle (MEP) to learn the DNN reward function, and provide the necessary derivations for using the maximum entropy principle to learn a parameterized feature (reward) function. Simulated results demonstrate the desired driving behaviors of an autonomous vehicle using both the reinforcement learning and inverse reinforcement learning techniques.}},  
-pages = {1--18},  
-volume = {114} 
-}
-@article{10.1016/j.engappai.2021.104211,  
-year = {2021},  
-title = {{Recent advances in motion and behavior planning techniques for software architecture of autonomous vehicles: A state-of-the-art survey}},  
-author = {Sharma, Omveer and Sahoo, N.C. and Puhan, N.B.},  
-journal = {Engineering Applications of Artificial Intelligence},  
-issn = {0952-1976},  
-doi = {10.1016/j.engappai.2021.104211},  
-abstract = {{Autonomous vehicles (AVs) have now drawn significant attentions in academic and industrial research because of various advantages such as safety improvement, lower energy and fuel consumption, exploitation of road network, reduced traffic congestion and greater mobility. In critical decision making process during motion of an AV, intelligent motion planning takes an important and challenging role for obstacle avoidance, searching for the safest path to follow, generation of suitable behavior and comfortable trajectory generation by optimization while keeping road boundaries and traffic rules as important concerns. An AV should also be able to decide the safest behavior (such as overtaking in case of highway driving) at each moment during driving. The behavior planning techniques anticipate the behaviors of all traffic participants; then it reasonably decides the best and safest behavior for AV. For this highly challenging task, many different motion and behavior planning techniques for AVs have been developed over past few decades. The purpose of this paper is to present an exhaustive and critical review of these existing approaches on motion and behavior planning for AVs in terms of their feasibility, capability in handling dynamic constraints and obstacles, and optimality of motion for comfort. A critical evaluation of the existing behavior planning techniques highlighting their advantages, ability in handling of static and dynamic obstacles, vehicle constraints and limitations in operational environments has also been presented.}},  
-pages = {104211},  
-volume = {101} 
+
+@article{10.1016/j.engappai.2021.104211,
+  year =         2021,
+  title =        {{Recent advances in motion and behavior planning techniques
+                  for software architecture of autonomous vehicles: A
+                  state-of-the-art survey}},
+  author =       {Sharma, Omveer and Sahoo, N.C. and Puhan, N.B.},
+  journal =      {Engineering Applications of Artificial Intelligence},
+  issn =         {0952-1976},
+  doi =          {10.1016/j.engappai.2021.104211},
+  abstract =     {{Autonomous vehicles (AVs) have now drawn significant
+                  attentions in academic and industrial research because of
+                  various advantages such as safety improvement, lower energy
+                  and fuel consumption, exploitation of road network, reduced
+                  traffic congestion and greater mobility. In critical decision
+                  making process during motion of an AV, intelligent motion
+                  planning takes an important and challenging role for obstacle
+                  avoidance, searching for the safest path to follow, generation
+                  of suitable behavior and comfortable trajectory generation by
+                  optimization while keeping road boundaries and traffic rules
+                  as important concerns. An AV should also be able to decide the
+                  safest behavior (such as overtaking in case of highway
+                  driving) at each moment during driving. The behavior planning
+                  techniques anticipate the behaviors of all traffic
+                  participants; then it reasonably decides the best and safest
+                  behavior for AV. For this highly challenging task, many
+                  different motion and behavior planning techniques for AVs have
+                  been developed over past few decades. The purpose of this
+                  paper is to present an exhaustive and critical review of these
+                  existing approaches on motion and behavior planning for AVs in
+                  terms of their feasibility, capability in handling dynamic
+                  constraints and obstacles, and optimality of motion for
+                  comfort. A critical evaluation of the existing behavior
+                  planning techniques highlighting their advantages, ability in
+                  handling of static and dynamic obstacles, vehicle constraints
+                  and limitations in operational environments has also been
+                  presented.}},
+  pages =        104211,
+  volume =       101
 }
 
 @article{10.1109/tiv.2023.3329885,
